# word-counter

./: Cargo.toml  README.md  build.rs
src/: main.rs  test.rs
