[package]
name = "wcc"
version = "1.0.10"
edition = "2021"
authors = ["Pream <preampinbut@outlook.co.th>"]
description = "this is my own version of wc for personal use"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/momozahara/word-counter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.0"
